--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 
+set(CMAKE_CXX_STANDARD 17)
+
 set(PROJECT_NAME GlobalOptimization)
 project(${PROJECT_NAME})
 
@@ -7,7 +9,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/GCGen/src/)
 
 set(SOURCE_EXE main.cpp)
-file(GLOB SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/GCGen/sample_src/Grishagin/*.hpp
+file(GLOB SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
+	            ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
+	            ${CMAKE_CURRENT_SOURCE_DIR}/GCGen/sample_src/Grishagin/*.hpp
                     ${CMAKE_CURRENT_SOURCE_DIR}/GCGen/sample_src/Grishagin/*.cpp
                     ${CMAKE_CURRENT_SOURCE_DIR}/GCGen/src/*.cpp
                     ${CMAKE_CURRENT_SOURCE_DIR}/GCGen/src/*.h
