--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.12)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(PROJECT_NAME GlobalOptimization)
+set(PROJECT_NAME global_optimization)
 project(${PROJECT_NAME})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
